# rl_quad

./: .clang-format  .gitignore  README.md
gcopter/: CMakeLists.txt
gcopter/include/gcopter/: firi.hpp  sfc_gen.hpp  voxel_map.hpp
gcopter/include/misc/: visualizer.hpp
gcopter/src/: global_planning.cpp
rl_control_test/: CMakeLists.txt  package.xml
rl_control_test/config/: sfc_node.yaml  viz.rviz
rl_control_test/include/: sfc_node.hpp  uav_env.hpp
rl_control_test/launch/: poly.launch  rl.launch  rl_py.launch  rviz.launch  simulator.xml
rl_control_test/msg/: Halfspace.msg  Polytope.msg
rl_control_test/scripts/: VAE.py  quad.py  train_ppo.py  uav_gym.py
rl_control_test/scripts/archive/: UAV_env.py  api_demo.py  hull.PY  train_velodyne_td3.py  viz.py
rl_control_test/src/: rl_test.cc  sfc_node.cc
rl_control_test/srv/: Sfc.srv
uav_simulator/local_sensing/src/: pointcloud_render_node.cpp
uav_simulator/map_generator/src/: random_forest_sensing.cpp
uav_simulator/so3_quadrotor_simulator/: CMakeLists.txt  package.xml
uav_simulator/so3_quadrotor_simulator/include/quadrotor_simulator/: Quadrotor.h  simulator.h
uav_simulator/so3_quadrotor_simulator/src/: quadrotor_simulator_so3.cpp  simulator.cc
uav_simulator/so3_quadrotor_simulator/src/dynamics/: Quadrotor.cpp
utils/quadrotor_msgs/: CMakeLists.txt
utils/quadrotor_msgs/msg/: Control.msg
