<package>
  <version>0.0.0</version>
  <name>rl_control_test</name>
  <description>

     rl

  </description>

  <maintainer email="todo@todo.todo">Kartik Mohta</maintainer>
  <license>BSD</license>
  <url>http://cqu.edu.cn</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>quadrotor_msgs</build_depend>
  <build_depend>uav_utils</build_depend>
  <build_depend>cmake_utils</build_depend>
  <build_depend>gcopter</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>decomp_util</build_depend>
  <build_depend>decomp_ros_utils</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>quadrotor_msgs</run_depend>
  <run_depend>uav_utils</run_depend>
  <run_depend>cmake_utils</run_depend>
  <run_depend>gcopter</run_depend>
  <run_depend>message_runtime</run_depend>

</package>


